# gtest_mpi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.cpp  gtest_mpi.h  run.sh
